--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
   <!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 
+	<scm>
+		<connection>scm:git:https://github.com/BorisDaich/vz-public-apps.git</connection>
+	</scm>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>17</maven.compiler.source>
@@ -116,6 +120,24 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-scm-plugin</artifactId>
+				<version>2.0.0-M1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+                        <goals>
+							<goal>checkin</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<connectionType>connection</connectionType>
+					<message>test</message>
+					<username>fercp</username>
+				</configuration>
 			</plugin>
 		</plugins>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
