--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,11 @@
 
 	<groupId>com.fersoft</groupId>
 	<artifactId>jnlp</artifactId>
-	<version>3.0-SNAPSHOT</version>
+	<version>2.0-SNAPSHOT</version>
 
 	<name>jnlp</name>
   <!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
-
-	<scm>
-		<connection>scm:git:https://github.com/fercp/fercp.github.io.git</connection>
-	</scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -34,24 +30,6 @@
 		<finalName>${project.artifactId}__V${project.version}</finalName>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-scm-plugin</artifactId>
-				<version>2.0.0-M1</version>
-				<executions>
-					<execution>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>checkout</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<connectionType>connection</connectionType>
-					<username>fercp</username>
-					<checkoutDirectory>publish</checkoutDirectory>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>com.google.code.maven-replacer-plugin</groupId>
 				<artifactId>replacer</artifactId>
 				<version>1.5.2</version>
@@ -65,7 +43,7 @@
 				</executions>
 				<configuration>
 					<basedir>${project.basedir}</basedir>
-					<filesToInclude>publish/test.jnlp</filesToInclude>
+					<filesToInclude>src/main/resources/test.jnlp</filesToInclude>
 					<replacements>
 						<replacement>
 							<token>main="true" version=".*/</token>
@@ -108,7 +86,7 @@
 									</manifestSection>
 								</manifestSections>
 							</archive>
-							<outputDirectory>${project.basedir}/publish</outputDirectory>
+							<outputDirectory>${project.basedir}</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
@@ -138,25 +116,6 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-scm-plugin</artifactId>
-				<version>2.0.0-M1</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>checkin</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<connectionType>connection</connectionType>
-					<message>test</message>
-					<username>fercp</username>
-				</configuration>
 			</plugin>
 		</plugins>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
